--- a/chest/tsconfig.json
+++ b/chest/tsconfig.json
@@ -10,8 +10,10 @@
     "baseUrl": "src",
 
     "strict": true,
-    "esModuleInterop": true,
     "skipLibCheck": true,
+    "esModuleInterop": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
 }
