--- a/chest/package.json
+++ b/chest/package.json
@@ -36,5 +36,9 @@
     "prettier": "^2.4.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "ajv": "^8.6.3",
+    "reflect-metadata": "^0.1.13"
   }
 }
