--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
         files: \.[jt]s$
         args: [-c, chest/.eslintrc.cjs]
         additional_dependencies:
+          - "@babel/eslint-parser@7.16.0"
           - "@typescript-eslint/eslint-plugin@5.3.0"
           - "@typescript-eslint/parser@5.3.0"
           - eslint@7.32.0
