--- a/chest/package.json
+++ b/chest/package.json
@@ -14,18 +14,36 @@
     }
   ],
   "main": "src/index.ts",
+  "type": "module",
   "scripts": {
-    "build": "tsc",
-    "test": "mocha -r ts-node/register tests/**/*.spec.ts",
-    "lint": "eslint src tests --fix",
-    "format": "prettier --write ."
+    "type-check": "tsc --noEmit",
+    "lint": "eslint src test --fix",
+    "format": "prettier --write .",
+    "build": "npm run build:types && npm run build:js",
+    "build:types": "tsc --emitDeclarationOnly",
+    "build:js": "babel src -d lib",
+    "test": "mocha --require test/babel-register.js test/**/*.spec.ts"
+  },
+  "directories": {
+    "lib": "./src",
+    "test": "./test"
   },
   "devDependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/eslint-parser": "^7.16.3",
+    "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@babel/plugin-proposal-decorators": "^7.16.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
+    "@babel/register": "^7.16.0",
     "@types/chai": "^4.2.22",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.6",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "chai": "^4.3.4",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
@@ -34,11 +52,12 @@
     "eslint-plugin-prettier": "^4.0.0",
     "mocha": "^9.1.3",
     "prettier": "^2.4.1",
-    "ts-node": "^9.1.1",
+    "regenerator-runtime": "^0.13.9",
     "typescript": "^4.4.4"
   },
   "dependencies": {
     "ajv": "^8.6.3",
+    "cross-fetch": "^3.1.4",
     "reflect-metadata": "^0.1.13"
   }
 }
