--- a/chest/tsconfig.json
+++ b/chest/tsconfig.json
@@ -1,19 +1,19 @@
 {
   "exclude": ["node_modules"],
-  "include": ["src", "tests"],
+  "include": ["src", "test"],
   "compilerOptions": {
     "lib": ["es2021"],
     "module": "commonjs",
     "target": "es2021",
 
-    "outDir": "dist",
     "baseUrl": "src",
+    "outDir": "lib",
 
     "strict": true,
+    "declaration": true,
     "skipLibCheck": true,
-    "esModuleInterop": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true
-  },
+  }
 }
